log/build_2025-06-17_15-44-03/my_cpp_package/stdout_stderr.log
[1/2] Building CXX object CMakeFiles/my_node.dir/src/my_node.cpp.o
FAILED: CMakeFiles/my_node.dir/src/my_node.cpp.o 
/Users/swin/code/ros2/ros2_humble/.pixi/envs/default/bin/arm64-apple-darwin20.0.0-clang++ -DDEFAULT_RMW_IMPLEMENTATION=rmw_cyclonedds_cpp -isystem /Users/swin/code/ros2/ros2_humble/.pixi/envs/default/include/rclcpp -isystem /Users/swin/code/ros2/ros2_humble/.pixi/envs/default/include/cv_bridge -isystem /Users/swin/code/ros2/ros2_humble/.pixi/envs/default/include/image_transport -isystem /Users/swin/code/ros2/ros2_humble/.pixi/envs/default/include/sensor_msgs -isystem /Users/swin/code/ros2/ros2_humble/.pixi/envs/default/include/python3.11 -isystem /Users/swin/code/ros2/ros2_humble/.pixi/envs/default/lib/python3.11/site-packages/numpy/core/include -isystem /Users/swin/code/ros2/ros2_humble/.pixi/envs/default/include/opencv4 -isystem /Users/swin/code/ros2/ros2_humble/.pixi/envs/default/include/ament_index_cpp -isystem /Users/swin/code/ros2/ros2_humble/.pixi/envs/default/include/libstatistics_collector -isystem /Users/swin/code/ros2/ros2_humble/.pixi/envs/default/include/builtin_interfaces -isystem /Users/swin/code/ros2/ros2_humble/.pixi/envs/default/include/rosidl_runtime_c -isystem /Users/swin/code/ros2/ros2_humble/.pixi/envs/default/include/rcutils -isystem /Users/swin/code/ros2/ros2_humble/.pixi/envs/default/include/rosidl_typesupport_interface -isystem /Users/swin/code/ros2/ros2_humble/.pixi/envs/default/include/rosidl_runtime_cpp -isystem /Users/swin/code/ros2/ros2_humble/.pixi/envs/default/include/rosidl_typesupport_fastrtps_cpp -isystem /Users/swin/code/ros2/ros2_humble/.pixi/envs/default/include/rmw -isystem /Users/swin/code/ros2/ros2_humble/.pixi/envs/default/include/rosidl_typesupport_fastrtps_c -isystem /Users/swin/code/ros2/ros2_humble/.pixi/envs/default/include/rosidl_typesupport_introspection_c -isystem /Users/swin/code/ros2/ros2_humble/.pixi/envs/default/include/rosidl_typesupport_introspection_cpp -isystem /Users/swin/code/ros2/ros2_humble/.pixi/envs/default/include/rcl -isystem /Users/swin/code/ros2/ros2_humble/.pixi/envs/default/include/rcl_interfaces -isystem /Users/swin/code/ros2/ros2_humble/.pixi/envs/default/include/rcl_logging_interface -isystem /Users/swin/code/ros2/ros2_humble/.pixi/envs/default/include/rcl_yaml_param_parser -isystem /Users/swin/code/ros2/ros2_humble/.pixi/envs/default/include/tracetools -isystem /Users/swin/code/ros2/ros2_humble/.pixi/envs/default/include/rcpputils -isystem /Users/swin/code/ros2/ros2_humble/.pixi/envs/default/include/statistics_msgs -isystem /Users/swin/code/ros2/ros2_humble/.pixi/envs/default/include/rosgraph_msgs -isystem /Users/swin/code/ros2/ros2_humble/.pixi/envs/default/include/rosidl_typesupport_cpp -isystem /Users/swin/code/ros2/ros2_humble/.pixi/envs/default/include/rosidl_typesupport_c -isystem /Users/swin/code/ros2/ros2_humble/.pixi/envs/default/include/geometry_msgs -isystem /Users/swin/code/ros2/ros2_humble/.pixi/envs/default/include/std_msgs -isystem /Users/swin/code/ros2/ros2_humble/.pixi/envs/default/include/message_filters -ftree-vectorize -fPIC -fstack-protector-strong -O2 -pipe -stdlib=libc++ -fvisibility-inlines-hidden -fmessage-length=0 -isystem /Users/swin/code/ros2/ros2_humble/.pixi/envs/default/include -arch arm64 -isysroot /Library/Developer/CommandLineTools/SDKs/MacOSX.sdk -MD -MT CMakeFiles/my_node.dir/src/my_node.cpp.o -MF CMakeFiles/my_node.dir/src/my_node.cpp.o.d -o CMakeFiles/my_node.dir/src/my_node.cpp.o -c /Users/swin/code/ros2/ros2_humble/src/my_cpp_package/src/my_node.cpp
/Users/swin/code/ros2/ros2_humble/src/my_cpp_package/src/my_node.cpp:33:17: error: expected parameter declarator
   33 |   cv::Mat frame(720, 1280, CV_8UC3);
      |                 ^
/Users/swin/code/ros2/ros2_humble/src/my_cpp_package/src/my_node.cpp:33:17: error: expected ')'
/Users/swin/code/ros2/ros2_humble/src/my_cpp_package/src/my_node.cpp:33:16: note: to match this '('
   33 |   cv::Mat frame(720, 1280, CV_8UC3);
      |                ^
/Users/swin/code/ros2/ros2_humble/src/my_cpp_package/src/my_node.cpp:17:17: error: reference to non-static member function must be called; did you mean to call it with no arguments?
   17 |           fread(frame.data, 1, 1280*720*3, pipe_);
      |                 ^~~~~
      |                      ()
/Users/swin/code/ros2/ros2_humble/src/my_cpp_package/src/my_node.cpp:18:74: error: reference to non-static member function must be called; did you mean to call it with no arguments?
   18 |           auto msg = cv_bridge::CvImage(std_msgs::msg::Header(), "bgr8", frame).toImageMsg();
      |                                                                          ^~~~~
      |                                                                               ()
/Users/swin/code/ros2/ros2_humble/src/my_cpp_package/src/my_node.cpp:20:37: error: reference to non-static member function must be called; did you mean to call it with no arguments?
   20 |           cv::imshow("RTMP Stream", frame);
      |                                     ^~~~~
      |                                          ()
5 errors generated.
ninja: build stopped: subcommand failed.
